<?xml version="1.0"?>
<package format="2">
    <!-- package information -->
    <name>ximea_ros_cam</name>
    <version>1.0.0</version>
    <description>Ximea ROS Camera</description>
    <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
    <!-- authour information -->
    <author>Carlos Wang</author>
    <license>MIT</license>

    <!-- build tool information  -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- depends -->
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>camera_info_manager</depend>
    <depend>std_msgs</depend>
    <depend>opencv3</depend>
    <depend>dynamic_reconfigure</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- nodelet plugin -->
        <nodelet plugin="${prefix}/ximea_ros_cam.xml"/>
    </export>
</package>
